# mush

./: .gitignore  CMakeLists.txt  bug.txt  lex.yy.c  readme.md  sh.h  sh.l  sh.tab.c  sh.tab.h  sh.y  testShell
inc/: path.h
src/: file.c  path.c  sh.c  task.c
